--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=5000
-
 telegrambot.userName=PackYourSuitcaseBot
 telegrambot.botToken=1688828871:AAG5nj6K_sXNx0wLb-dcNxxugZWKU6mf_dU
-telegrambot.webHookPath=https://709b8686bf83.ngrok.io
+telegrambot.webHookPath=https://7706cff8411d.ngrok.io
 
 spring.datasource.url:jdbc:postgresql://ziggy.db.elephantsql.com:5432/lrxyxhag?currentSchema=turizm
 spring.datasource.username=lrxyxhag
@@ -13,4 +11,12 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.default_schema=turizm
 spring.jpa.database=POSTGRESQL
 spring.jpa.showSql=true
+
+pingTask.url=https://www.google.com
+pingTask.period=120000
+
+
+
+
+
 
