--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,15 @@
 telegrambot.userName=PackYourSuitcaseBot
 telegrambot.botToken=1688828871:AAG5nj6K_sXNx0wLb-dcNxxugZWKU6mf_dU
-telegrambot.webHookPath=https://7706cff8411d.ngrok.io
+telegrambot.webHookPath=https://travel-bot-logvinova.herokuapp.com/
 
-spring.datasource.url:jdbc:postgresql://ziggy.db.elephantsql.com:5432/lrxyxhag?currentSchema=turizm
-spring.datasource.username=lrxyxhag
-spring.datasource.password=Bn1G9SGY5_zefs8GYFk9KQlnfHIXZm1X
+spring.datasource.url: ${JDBC_DATABASE_URL}
+spring.datasource.username: ${JDBC_DATABASE_USERNAME}
+spring.datasource.password: ${JDBC_DATABASE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.default_schema=turizm
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
 spring.jpa.showSql=true
 
 pingTask.url=https://www.google.com
 pingTask.period=120000
-
-
-
-
-
-
